packages/@resist.js/svelte-kit/test/apps/basics/src/routes/errors/load-status-without-error-server.svelte
<script context="module">
	/** @type {import('@resistjs/svelte-kit').Load} */
	export async function load() {
		return { status: 401 };
	}
</script>
